prevent wrapping in navbar elements for narrow screens. #122.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,6 +13,7 @@ body {
 }
 
 .navbar .row {
+	flex-wrap: nowrap;
 	align-items: baseline;
 	padding-bottom: 0;
 	border-bottom: 3px solid var(--invest-green);
@@ -106,6 +107,10 @@ body {
 
 .navbar .alert {
 	padding: 0.4rem;
+}
+
+.navbar .row .text-right {
+	white-space: nowrap;
 }
 
 .settings-icon {
